--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ edition = "2021"
 # very slow image processing i could have done in python but oh well
 "image" = "0.24.4"
 "imageproc" = "0.23.0"
+
+"rand" = "0.8.5"
+"lazy_static" = "1.4.0"
