--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 # ur welcome conor
-"afire" = {version = "1.2.0", features = ["extensions", "tracing"] }
+afire = {version = "1.2.0", features = ["extensions", "tracing"] }
 # very slow image processing i could have done in python but oh well
-"image" = "0.24.4"
-"imageproc" = "0.23.0"
+image = "0.24.4"
+imageproc = "0.23.0"
 
-"rand" = "0.8.5"
-"lazy_static" = "1.4.0"
-"markdown" = "0.3.0"
+rand = "0.8.5"
+lazy_static = "1.4.0"
+comrak = "0.14"
+autodefault = "2.0.0"
