--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,15 @@ afire = {version = "1.2.0", features = ["extensions", "tracing"] }
 # image = "0.24.4"
 # imageproc = "0.23.0"
 
+# lol xd im so random
 rand = "0.8.5"
+# mandatory
 lazy_static = "1.4.0"
+# markdown processing
 comrak = "0.14"
+# good error handling
 anyhow = "1.0"
+# time
 chrono = "0.4.22"
+# pretty printing
 crossterm = "0.25.0"
