--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ chrono = "0.4.22"
 # pretty printing
 crossterm = "0.25.0"
 # i *need* to know how many views my articles get its very important for me and for my ego and for you and for me
-sqlite = "0.28.1"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
