--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-/node_modules
-/web/static/assets/parsed_markdown/*
-/web/static/styles/*.map
-/web/template/baked/*
-/web/static/article/*
-
-# Added by cargo
-
-/target
-/.sass-cache
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+.vercel
+.output
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
