--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
@@ -31,7 +29,10 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"xterm": "^5.3.0",
+		"xterm-addon-fit": "^0.8.0",
+		"xterm-addon-webgl": "^0.16.0"
 	},
 	"type": "module"
 }
