--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
-		"postcss": "^8.4.31",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^4.0.2",
+		"postcss-nesting": "^12.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
