--- a/src/lib/window/gen/config.yml
+++ b/src/lib/window/gen/config.yml
@@ -23,3 +23,5 @@ registry:
       velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
       cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
       est laborum.
+    width: [120, 90]
+    height: [90, 100]
