start terminal app

--- a/src/components/window/gen/config.yml
+++ b/src/components/window/gen/config.yml
@@ -33,3 +33,11 @@ registry:
     app:
       icon: settings
       row: -1
+
+  - id: terminal
+    base: window
+    title: Terminal
+    file: Terminal
+    app:
+      icon: terminal
+      row: -1
