--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.16",
+		"chokidar": "^3.5.3",
 		"eslint": "^8.52.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"glob": "^10.3.10",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^4.0.2",
 		"postcss-nesting": "^12.0.1",
